--- a/client/www/index.html
+++ b/client/www/index.html
@@ -20,15 +20,28 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+
+    <!--Services-->
+    <script src="js/service/mainService.js"></script>
+    <script src="js/service/authService.js"></script>
+
+    <script src="js/service/profileService.js"></script>
+    <!--All Controllers-->
+    <script src="js/controllers/maincontroller.js"></script>
+    <script src="js/controllers/signUp.js"></script>
+    <script src="js/controllers/login.js"></script>
+    <script src="js/controllers/profile.js"></script>
   </head>
   <body ng-app="starter">
 
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
-    </ion-pane>
+  <ion-nav-bar class="bar-positive">
+    <ion-nav-back-button class="button-clear">
+      <i class="icon ion-ios-arrow-left"></i> Back
+    </ion-nav-back-button>
+  </ion-nav-bar>
+
+  <ion-nav-view>
+
+  </ion-nav-view>
   </body>
 </html>
