updates show goal and create functionality of profile pages

--- a/client/www/index.html
+++ b/client/www/index.html
@@ -31,6 +31,7 @@
     <script src="js/controllers/signUp.js"></script>
     <script src="js/controllers/login.js"></script>
     <script src="js/controllers/profile.js"></script>
+    <script src="js/controllers/showGoal.js"></script>
   </head>
   <body ng-app="starter">
 
