--- a/client/www/index.html
+++ b/client/www/index.html
@@ -14,7 +14,7 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-
+    <script src="js/angular-resource.min.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
@@ -24,8 +24,8 @@
     <!--Services-->
     <script src="js/service/mainService.js"></script>
     <script src="js/service/authService.js"></script>
-
     <script src="js/service/profileService.js"></script>
+    <script src="js/service/showGoalService.js"></script>
     <!--All Controllers-->
     <script src="js/controllers/maincontroller.js"></script>
     <script src="js/controllers/signUp.js"></script>
